Web Inspector: DOM.highlightSelector should work for "a:visited" https://bugs.webkit.org/show_bug.cgi?id=146161 <rdar://problem/21467303>

Reviewed by Antti Koivisto.

* inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::highlightSelector):
Rather than use `document.querySelectorAll`, which doesn't match pseudo-selectors, attempt
to mimic how CSS actually matches nodes.

* rendering/style/RenderStyleConstants.h:
(WebCore::PseudoIdSet::remove): Added.


Canonical link: https://commits.webkit.org/217476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252436 268f45cc-cd09-0410-ab3c-d52691b4dbfc